fixes url managemnt for playlist images delivered from pricing pages

--- a/pricing/premium/index.html
+++ b/pricing/premium/index.html
@@ -50,7 +50,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/chart-toppers">
-            <img src="playlists/chart-toppers.png">
+            <img src="../../playlists/chart-toppers.png">
             <figcaption>
               <h2 class="h6">Chart Toppers</h2>
               <p>The most wanted in 20-teen music</p>
@@ -67,7 +67,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/hit-tracks">
-            <img src="playlists/hit-tracks.png">
+            <img src="../../playlists/hit-tracks.png">
             <figcaption>
               <h2 class="h6">Hit Tracks</h2>
               <p>Dance and Top 40</p>
@@ -88,7 +88,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/musica-esencial">
-            <img src="playlists/musica-esencial.png">
+            <img src="../../playlists/musica-esencial.png">
             <figcaption>
               <h2 class="h6">Musica Esencial</h2>
               <p>Contemporary &amp; Hits from Latin America</p>
@@ -105,7 +105,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/radio-mix">
-            <img src="playlists/radio-mix.png">
+            <img src="../../playlists/radio-mix.png">
             <figcaption>
               <h2 class="h6">Radio Mix</h2>
               <p>Alternative and Top 40</p>
@@ -124,7 +124,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/throwbacks-and-favs">
-            <img src="playlists/throwbacks-and-favs.png">
+            <img src="../../playlists/throwbacks-and-favs.png">
             <figcaption>
               <h2 class="h6">Throwbacks and Favs</h2>
               <p>Contemporary Adult Listening</p>
@@ -139,7 +139,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/turntable-numbers">
-            <img src="playlists/turntable-numbers.png">
+            <img src="../../playlists/turntable-numbers.png">
             <figcaption>
               <h2 class="h6">Turntable Numbers</h2>
               <p>Pop and RnB</p>
@@ -154,7 +154,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/yesterdays-hits">
-            <img src="playlists/yesterdays-hits.png">
+            <img src="../../playlists/yesterdays-hits.png">
             <figcaption>
               <h2 class="h6">Yesterday&#39;s Hits</h2>
               <p>The greatest music hits</p>
@@ -198,7 +198,7 @@
                     <a href="../../playlists/chart-toppers">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/chart-toppers.png">
+                      <img src="../../playlists/chart-toppers.png">
                       <figcaption>
                         <h2 class="h5">Chart Toppers</h2>
                         <p>The most wanted in 20-teen music</p>
@@ -216,7 +216,7 @@
                     <a href="../../playlists/hit-tracks">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/hit-tracks.png">
+                      <img src="../../playlists/hit-tracks.png">
                       <figcaption>
                         <h2 class="h5">Hit Tracks</h2>
                         <p>Dance and Top 40</p>
@@ -238,7 +238,7 @@
                     <a href="../../playlists/musica-esencial">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/musica-esencial.png">
+                      <img src="../../playlists/musica-esencial.png">
                       <figcaption>
                         <h2 class="h5">Musica Esencial</h2>
                         <p>Contemporary &amp; Hits from Latin America</p>
@@ -256,7 +256,7 @@
                     <a href="../../playlists/radio-mix">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/radio-mix.png">
+                      <img src="../../playlists/radio-mix.png">
                       <figcaption>
                         <h2 class="h5">Radio Mix</h2>
                         <p>Alternative and Top 40</p>
@@ -276,7 +276,7 @@
                     <a href="../../playlists/throwbacks-and-favs">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/throwbacks-and-favs.png">
+                      <img src="../../playlists/throwbacks-and-favs.png">
                       <figcaption>
                         <h2 class="h5">Throwbacks and Favs</h2>
                         <p>Contemporary Adult Listening</p>
@@ -292,7 +292,7 @@
                     <a href="../../playlists/turntable-numbers">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/turntable-numbers.png">
+                      <img src="../../playlists/turntable-numbers.png">
                       <figcaption>
                         <h2 class="h5">Turntable Numbers</h2>
                         <p>Pop and RnB</p>
@@ -308,7 +308,7 @@
                     <a href="../../playlists/yesterdays-hits">
                     <figure class="card playlist-card on-light">
                       <i class="fas fa-star premium-alert"></i>
-                      <img src="../playlists/yesterdays-hits.png">
+                      <img src="../../playlists/yesterdays-hits.png">
                       <figcaption>
                         <h2 class="h5">Yesterday&#39;s Hits</h2>
                         <p>The greatest music hits</p>
