--- a/pricing/starter/index.html
+++ b/pricing/starter/index.html
@@ -48,7 +48,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/acoustic-dream">
-            <img src="playlists/acoustic-dream.png">
+            <img src="../../playlists/acoustic-dream.png">
             <figcaption>
               <h2 class="h6">Acoustic Dream</h2>
               <p>Down-To-Earth</p>
@@ -65,7 +65,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/fresh-and-trendy">
-            <img src="playlists/fresh-and-trendy.png">
+            <img src="../../playlists/fresh-and-trendy.png">
             <figcaption>
               <h2 class="h6">Fresh and Trendy</h2>
               <p>Latest &amp; Most Popular</p>
@@ -82,7 +82,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/indie-days">
-            <img src="playlists/indie-days.png">
+            <img src="../../playlists/indie-days.png">
             <figcaption>
               <h2 class="h6">Indie Days</h2>
               <p>Stylish &amp; Edgy</p>
@@ -97,7 +97,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/jazz-classics">
-            <img src="playlists/jazz-classics.png">
+            <img src="../../playlists/jazz-classics.png">
             <figcaption>
               <h2 class="h6">Jazz Classics</h2>
               <p>Sophtisticated</p>
@@ -112,7 +112,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/mainstream-pop">
-            <img src="playlists/mainstream-pop.png">
+            <img src="../../playlists/mainstream-pop.png">
             <figcaption>
               <h2 class="h6">Mainstream Pop</h2>
               <p>Casual Classics</p>
@@ -129,7 +129,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/now-pop">
-            <img src="playlists/now-pop.png">
+            <img src="../../playlists/now-pop.png">
             <figcaption>
               <h2 class="h6">Now Pop</h2>
               <p>Fresh &amp; Accessible</p>
@@ -146,7 +146,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/route-66">
-            <img src="playlists/route-66.png">
+            <img src="../../playlists/route-66.png">
             <figcaption>
               <h2 class="h6">Route 66</h2>
               <p>Mid Tempo</p>
@@ -161,7 +161,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/smooth-lounge">
-            <img src="playlists/smooth-lounge.png">
+            <img src="../../playlists/smooth-lounge.png">
             <figcaption>
               <h2 class="h6">Smooth Lounge</h2>
               <p>Elegant &amp; Low-Key</p>
@@ -182,7 +182,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
             <a href="../../playlists/young-and-free">
-            <img src="playlists/young-and-free.png">
+            <img src="../../playlists/young-and-free.png">
             <figcaption>
               <h2 class="h6">Young And Free</h2>
               <p>Epic Pop Beats</p>
@@ -217,7 +217,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/acoustic-dream">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/acoustic-dream.png">
+                        <img src="../../playlists/acoustic-dream.png">
                         <figcaption>
                           <h2 class="h5">Acoustic Dream</h2>
                           <p>Down-To-Earth</p>
@@ -234,7 +234,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/fresh-and-trendy">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/fresh-and-trendy.png">
+                        <img src="../../playlists/fresh-and-trendy.png">
                         <figcaption>
                           <h2 class="h5">Fresh and Trendy</h2>
                           <p>Latest &amp; Most Popular</p>
@@ -251,7 +251,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/indie-days">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/indie-days.png">
+                        <img src="../../playlists/indie-days.png">
                         <figcaption>
                           <h2 class="h5">Indie Days</h2>
                           <p>Stylish &amp; Edgy</p>
@@ -266,7 +266,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/jazz-classics">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/jazz-classics.png">
+                        <img src="../../playlists/jazz-classics.png">
                         <figcaption>
                           <h2 class="h5">Jazz Classics</h2>
                           <p>Sophtisticated</p>
@@ -281,7 +281,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/mainstream-pop">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/mainstream-pop.png">
+                        <img src="../../playlists/mainstream-pop.png">
                         <figcaption>
                           <h2 class="h5">Mainstream Pop</h2>
                           <p>Casual Classics</p>
@@ -298,7 +298,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/now-pop">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/now-pop.png">
+                        <img src="../../playlists/now-pop.png">
                         <figcaption>
                           <h2 class="h5">Now Pop</h2>
                           <p>Fresh &amp; Accessible</p>
@@ -315,7 +315,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/route-66">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/route-66.png">
+                        <img src="../../playlists/route-66.png">
                         <figcaption>
                           <h2 class="h5">Route 66</h2>
                           <p>Mid Tempo</p>
@@ -330,7 +330,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/smooth-lounge">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/smooth-lounge.png">
+                        <img src="../../playlists/smooth-lounge.png">
                         <figcaption>
                           <h2 class="h5">Smooth Lounge</h2>
                           <p>Elegant &amp; Low-Key</p>
@@ -351,7 +351,7 @@
                     <li class="card-instance">
                       <a href="../../playlists/young-and-free">
                       <figure class="card playlist-card on-light">
-                        <img src="../playlists/young-and-free.png">
+                        <img src="../../playlists/young-and-free.png">
                         <figcaption>
                           <h2 class="h5">Young And Free</h2>
                           <p>Epic Pop Beats</p>
