adds placeholder for sign up interface and links all sign up buttons to sign up placeholder

--- a/playlists/index.html
+++ b/playlists/index.html
@@ -18,7 +18,7 @@
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../">Home</a></li><li><a class="" href="../pricing/starter/">Starter</a></li><li><a class="" href="../pricing/premium/">Premium</a></li><li><a class="" href="../pricing/cube-player/">Cube Player</a></li></ul>
+  <li><a class="" href="../pricing/starter/">Starter</a></li><li><a class="" href="../pricing/premium/">Premium</a></li><li><a class="" href="../pricing/cube-player/">Cube Player</a></li><li><a class="" href="../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -158,7 +158,7 @@
         </ul>
 
           <h3 class="inverse bg-secondary" style="padding: 1rem;">All of these channels are available to you at just $18.99 per month.</h3>
-          <center>  <a href="../pricing/premium" class="button btn-stack">Sign Up</a></center>
+          <center>  <a href="sign-up/" class="button btn-stack">Sign Up</a></center>
 
 <div style="height: 4rem"></div>
 
@@ -318,7 +318,7 @@
               
             </ul>
             <h3 class="inverse bg-secondary" style="padding: 1rem;">All of these starter channels are available to you at just $8.99 per month.</h3>
-            <center>  <a href="../pricing/starter" class="button btn-stack">Sign Up</a></center>
+            <center>  <a href="sign-up/" class="button btn-stack">Sign Up</a></center>
 
 
 
