--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a class="navbar-brand" href="./">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="./">Home</a></li><li><a class="" href="./pricing/starter/">Starter</a></li><li><a class="" href="./pricing/premium/">Premium</a></li><li><a class="" href="./pricing/cube-player/">Cube Player</a></li></ul>
+  <li><a class="" href="./pricing/starter/">Starter</a></li><li><a class="" href="./pricing/premium/">Premium</a></li><li><a class="" href="./pricing/cube-player/">Cube Player</a></li><li><a class="" href="./sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -48,10 +48,10 @@
             <h2 class="h3">Starter</h2>
             <div class="card-details">
               <h3>$8.99/month</h3>
-              <p>Small business budget? No problem! This solutions gives you access to legal background music that will keep your customers coming back.</p>
+              <p>Small business budget? No problem! This solution gives you access to legal background music that will keep your customers coming back.</p>
               <center>
                 <a class="button" href="./pricing/starter">Details</a>
-                <a class="button" >Sign Up</a>
+                <a class="button" href="sign-up/" >Sign Up</a>
               </center>
             </div>
         </div>
@@ -62,10 +62,10 @@
             <h2 class="h3">Premium</h2>
             <div class="card-details">
               <h3>$18.99/month</h3>
-              <p>For a little more you get all teh benefits or four licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
+              <p>For a little more you get all the benefits or four licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
               <center class="mt-30">
                 <a class="button" href="./pricing/premium">Details</a>
-                <a class="button">Sign Up</a>
+                <a class="button" href="sign-up/">Sign Up</a>
               </center>
             </div>
           </div>
@@ -238,7 +238,7 @@
             <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
             <center class="mt-30">
               <a class="button" href="./pricing/cube-player">Details</a>
-              <a class="button">Sign Up</a>
+              <a class="button" href="sign-up/">Sign Up</a>
             </center>
           </div>
         </div>
