--- a/pricing/cube-player/index.html
+++ b/pricing/cube-player/index.html
@@ -18,7 +18,7 @@
 <a class="navbar-brand" href="../../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../../">Home</a></li><li><a class="" href="../../pricing/starter/">Starter</a></li><li><a class="" href="../../pricing/premium/">Premium</a></li><li><a class="active" href="../../pricing/cube-player/">Cube Player</a></li></ul>
+  <li><a class="" href="../../pricing/starter/">Starter</a></li><li><a class="" href="../../pricing/premium/">Premium</a></li><li><a class="active" href="../../pricing/cube-player/">Cube Player</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -47,7 +47,7 @@
 
     <div class="wrapper wrapper-col">
       
-      <center><a class="button">Sign Up</a></center>
+      <center><a class="button" href="sign-up/">Sign Up</a></center>
     </div>
 
 
