--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Tags</title>
+  <title>Sign Up</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -18,7 +18,7 @@
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a class="" href="../pricing/starter/">Starter</a></li><li><a class="" href="../pricing/premium/">Premium</a></li><li><a class="" href="../pricing/cube-player/">Cube Player</a></li><li><a class="" href="../sign-up/">Sign Up</a></li></ul>
+  <li><a class="" href="../pricing/starter/">Starter</a></li><li><a class="" href="../pricing/premium/">Premium</a></li><li><a class="" href="../pricing/cube-player/">Cube Player</a></li><li><a class="active" href="../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -28,11 +28,14 @@
  
 
 
-  <h1>Tags</h1>
+  <h1>Sign Up</h1>
 
 
     <section>
       
+
+<h3 id="placeholder-for-sign-up-interface">Placeholder For Sign-Up Interface</h3>
+
     </section>
 
 <center><a class="button" href="../">Home</a></center>
