fixes url management of sign up page from pricing pages

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/starter">Details</a>
-                  <a class="button" href="sign-up/">Sign Up</a>
+                  <a class="button" href="../../sign-up/">Sign Up</a>
                 </center>
             </div>
           </li>
@@ -62,7 +62,7 @@
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/premium">Details</a>
-                  <a class="button" href="sign-up/">Sign Up</a>
+                  <a class="button" href="../../sign-up/">Sign Up</a>
                 </center>
             </div>
           </li>
@@ -77,7 +77,7 @@
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/cube-player">Details</a>
-                  <a class="button" href="sign-up/">Sign Up</a>
+                  <a class="button" href="../../sign-up/">Sign Up</a>
                 </center>
             </div>
           </li>
