--- a/pricing/starter/index.html
+++ b/pricing/starter/index.html
@@ -205,7 +205,7 @@
       
       <a href="#playlistsOnPlan" class="button">View All Starter Business Music Channels</a>
       
-      <center><a class="button" href="sign-up/">Sign Up</a></center>
+      <center><a class="button" href="../../sign-up/">Sign Up</a></center>
     </div>
 
 
