--- a/pricing/cube-player/index.html
+++ b/pricing/cube-player/index.html
@@ -47,7 +47,7 @@
 
     <div class="wrapper wrapper-col">
       
-      <center><a class="button" href="sign-up/">Sign Up</a></center>
+      <center><a class="button" href="../../sign-up/">Sign Up</a></center>
     </div>
 
 
