--- a/pricing/premium/index.html
+++ b/pricing/premium/index.html
@@ -179,7 +179,7 @@
       
       <a href="#playlistsOnPlan" class="button">View All Premium Business Music Channels</a>
       
-      <center><a class="button" href="sign-up/">Sign Up</a></center>
+      <center><a class="button" href="../../sign-up/">Sign Up</a></center>
     </div>
 
 
