url management of links to sing up placeholder

--- a/playlists/index.html
+++ b/playlists/index.html
@@ -158,7 +158,7 @@
         </ul>
 
           <h3 class="inverse bg-secondary" style="padding: 1rem;">All of these channels are available to you at just $18.99 per month.</h3>
-          <center>  <a href="../../sign-up/" class="button btn-stack">Sign Up</a></center>
+          <center>  <a href="../sign-up" class="button btn-stack">Sign Up</a></center>
 
 <div style="height: 4rem"></div>
 
@@ -318,7 +318,7 @@
               
             </ul>
             <h3 class="inverse bg-secondary" style="padding: 1rem;">All of these starter channels are available to you at just $8.99 per month.</h3>
-            <center>  <a href="sign-up/" class="button btn-stack">Sign Up</a></center>
+            <center>  <a href="../sign-up" class="button btn-stack">Sign Up</a></center>
 
 
 
