fixes navigation between single playlists and back to pricing page with all playlists section

--- a/playlists/route-66/index.html
+++ b/playlists/route-66/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/young-and-free/" class="button btn-stack">Previous</a>
         
-        <a href="../../playlists/#starterPlaylists" class="button btn-stack">All</a>
+        <a href="../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/mainstream-pop/" class="button btn-stack">Next</a>
