--- a/playlists/yesterdays-hits/index.html
+++ b/playlists/yesterdays-hits/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/radio-mix/" class="button btn-stack">Previous</a>
         
-        <a href="../../playlists/#premiumPlaylists" class="button btn-stack">All</a>
+        <a href="../pricing/premium/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="" class="button btn-stack">Next</a>
