--- a/pricing/cube-player/index.html
+++ b/pricing/cube-player/index.html
@@ -61,6 +61,8 @@
       </ul>
     </section>
 
+    <center><a class="button" href="../../pricing">All Plans and Pricing</a></center>
+
 
 
 </div>
