--- a/playlists/indie-days/index.html
+++ b/playlists/indie-days/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../lyric-filters/" class="button btn-stack">Previous</a>
         
-        <a href="../../playlists/#starterPlaylists" class="button btn-stack">All</a>
+        <a href="../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/jazz-classics/" class="button btn-stack">Next</a>
