--- a/playlists/smooth-lounge/index.html
+++ b/playlists/smooth-lounge/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/acoustic-dream/" class="button btn-stack">Previous</a>
         
-        <a href="../../playlists/#starterPlaylists" class="button btn-stack">All</a>
+        <a href="../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/now-pop/" class="button btn-stack">Next</a>
