--- a/playlists/throwbacks-and-favs/index.html
+++ b/playlists/throwbacks-and-favs/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/chart-toppers/" class="button btn-stack">Previous</a>
         
-        <a href="../../playlists/#premiumPlaylists" class="button btn-stack">All</a>
+        <a href="../pricing/premium/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/musica-esencial/" class="button btn-stack">Next</a>
