--- a/pricing/premium/index.html
+++ b/pricing/premium/index.html
@@ -325,6 +325,8 @@
       </ul>
     </section>
 
+    <center><a class="button" href="../../pricing">All Plans and Pricing</a></center>
+
 
 
 </div>
