fixes url management for playlistsOnPlan anchor from playlists list page

--- a/playlists/turntable-numbers/index.html
+++ b/playlists/turntable-numbers/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/now-pop/" class="button btn-stack">Previous</a>
         
-        <a href="../pricing/premium/#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../../pricing/premium/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/hit-tracks/" class="button btn-stack">Next</a>
