--- a/playlists/young-and-free/index.html
+++ b/playlists/young-and-free/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/fresh-and-trendy/" class="button btn-stack">Previous</a>
         
-        <a href="../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/route-66/" class="button btn-stack">Next</a>
