--- a/playlists/now-pop/index.html
+++ b/playlists/now-pop/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
         <a href="../../playlists/smooth-lounge/" class="button btn-stack">Previous</a>
         
-        <a href="../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../../pricing/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../playlists/turntable-numbers/" class="button btn-stack">Next</a>
