updates home page did you know section per steves instruction

--- a/index.html
+++ b/index.html
@@ -252,14 +252,22 @@
           Did you know:
         </summary>
         <p> Copyright law requires specific licensing rights to play music in public. With Playmore Music we do all the legwork and you (and your customers) can simply enjoy great music.</p>
+        <p>The largest study* to date on on background music for small businesses revealed the following important facts:</p>
         <ul>
           <li>
-            83% of small businesses across the US are subscribing to the wrong service for their business music.
+            Over 80% of small businesses say that playing music in their business is important;
           </li>
           <li>
-            70% of small businesses believe that a personal music service gives them the legal right to play background music in their business.
+            88% play music daily or 4-5 days per week;
+          </li>
+          <li>
+            83% of small businesses illicitly use a personal (consumer) music service for their business;
+          </li>
+          <li>
+          70% of small businesses falsely believe that a personal music service gives them the legal right to play background music in their busines.
           </li>
         </ul>
+        <p>* 2018 Nielsen Music Study conducted with 5000 small businesses across the US, UK, Sweden, Spain, Italy, Germany and France. Margin of error +/- 4 percentage points at 95% confidence level.</p>
       </details>
       <p class="mt-30 h5">
         Playmore Music helps you to eliminate risk to your business, while paying record labels and musicians legal and fair compensation.
