fixes jumbotron cutting off contents when element inspector is open. fixes stack level buttons extending beyond viewport width on small screens

--- a/pricing/premium/index.html
+++ b/pricing/premium/index.html
@@ -162,7 +162,7 @@
 
     
     <div class="wrapper wrapper-col">
-      <a href="#playlistsOnPlan" class="button">View All Premium Business Music Channels</a>
+      <a href="#playlistsOnPlan" class="button btn-stack">View All Premium Business Music Channels</a>
       <center><a class="button" href="../../sign-up/">Sign Up for Premium</a></center>
     </div>
     
