--- a/pricing/starter/index.html
+++ b/pricing/starter/index.html
@@ -136,7 +136,7 @@
 
     
     <div class="wrapper wrapper-col">
-      <a href="#playlistsOnPlan" class="button">View All Starter Business Music Channels</a>
+      <a href="#playlistsOnPlan" class="button btn-stack">View All Starter Business Music Channels</a>
       <center><a class="button" href="../../sign-up/">Sign Up for Starter</a></center>
     </div>
     
