fixes wrapper problem on single pricepoint page template

--- a/pricing/cube-player/index.html
+++ b/pricing/cube-player/index.html
@@ -35,10 +35,12 @@
     </header>
     <div class="wrapper">
         
+    </div>
         
           <p>When you’re playing music at your store, there is always equipment responsible for doing the playback, outputting the audio signal into your amplifier and speakers. Either you’re using a physical player device, like CUBE, or you’re running software on a phone, tablet or computer. In any case, there is always some piece of equipment involved.</p>
-          <img src="../../pricing/most-reliable-business-music-player.jpg" style="max-width: 100%; height: auto;" class="mt-30">
-      </div>
+          <div class="wrapper">
+            <img src="../../pricing/most-reliable-business-music-player.jpg" style="max-width: 100%; height: auto;" class="mt-30">
+          </div>
           <p class="h3">There are a number of advantages in using a dedicated CUBE industrial music player:</p>
           <div class="wrapper">
     <figure class="text-card">
