--- a/playlists/route-66/index.html
+++ b/playlists/route-66/index.html
@@ -18,7 +18,7 @@
 <a class="navbar-brand" href="../../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a class="" href="../../pricing/starter/">Starter</a></li><li><a class="" href="../../pricing/premium/">Premium</a></li><li><a class="" href="../../pricing/cube-player/">CUBE Player</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
+  <li><a href="../../">Home</a></li> <li><a class="" href="../../pricing/starter/">Starter</a></li><li><a class="" href="../../pricing/premium/">Premium</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
