--- a/pricing/index.html
+++ b/pricing/index.html
@@ -18,7 +18,7 @@
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../">Home</a></li> <li><a class="" href="../pricing/starter/">Starter</a></li><li><a class="" href="../pricing/premium/">Premium</a></li><li><a class="" href="../sign-up/">Sign Up</a></li></ul>
+  <li><a class="" href="../pricing/starter/">Starter</a></li><li><a class="" href="../pricing/premium/">Premium</a></li><li><a class="" href="../pricing/cube-player/">CUBE Player</a></li><li><a class="" href="../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -62,6 +62,21 @@
                 </div>
                 <center class="align-end mb-30">
                   <a class="button" href="../pricing/premium">Details</a>
+                  <a class="button" href="../sign-up/">Sign Up</a>
+                </center>
+            </div>
+          </li>
+      
+        
+          <li class="card-instance">
+            <div class="card pricing-card pricing-list-card on-light on-white">
+                <h2 class="h3">CUBE Physical Player</h2>
+                <div class="card-details">
+                  <h3>$199 once-off</h3>
+                  <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
+                </div>
+                <center class="align-end mb-30">
+                  <a class="button" href="../pricing/cube-player">Details</a>
                   <a class="button" href="../sign-up/">Sign Up</a>
                 </center>
             </div>
