--- a/playlists/yesterdays-hits/index.html
+++ b/playlists/yesterdays-hits/index.html
@@ -49,7 +49,7 @@
                   <p class="h6 hover-expand">Sample</p>
                   <div class="expand hidden">
                   <div id="aplayer">
-                    <span class="sample-track"> ../playlists/digital-lemonade.mp3 </span>
+                    <span class="sample-track">../../../playlists/digital-lemonade.mp3 </span>
                   </div>
                   Attribution for temporary music used: Digital Lemonade by Kevin MacLeod (incompetech.com)
                       Licensed under Creative Commons: By Attribution 3.0
