--- a/playlists/turntable-numbers/index.html
+++ b/playlists/turntable-numbers/index.html
@@ -49,7 +49,7 @@
                   <p class="h6 hover-expand">Sample</p>
                   <div class="expand hidden">
                   <div id="aplayer">
-                    <span class="sample-track">../../../audio/captain-scurvy.mp3 </span>
+                    <span class="sample-track">audio/captain-scurvy.mp3 </span>
                   </div>
                   Attribution for temporary music used: Captain Scurvy by Kevin MacLeod (incompetech.com)
                       Licensed under Creative Commons: By Attribution 3.0
