externally hosts sample tracks on grateful heart design server

--- a/playlists/hit-tracks/index.html
+++ b/playlists/hit-tracks/index.html
@@ -49,7 +49,7 @@
                   <p class="h6 hover-expand">Sample</p>
                   <div class="expand hidden">
                   <div id="aplayer">
-                    <span class="sample-track">severe-tire-damage.mp3 </span>
+                    <span class="sample-track">https://gratefulheartdesign.com/sample-music/severe-tire-damage.mp3 </span>
                   </div>
                   Attribution for temporary music used: Severe Tire Damage by Kevin MacLeod (incompetech.com)
                       Licensed under Creative Commons: By Attribution 3.0
