--- a/playlists/throwbacks-and-favs/index.html
+++ b/playlists/throwbacks-and-favs/index.html
@@ -49,9 +49,9 @@
                   <p class="h6 hover-expand">Sample</p>
                   <div class="expand hidden">
                   <div id="aplayer">
-                    <span class="sample-track">captain-scurvy.mp3 </span>
+                    <span class="sample-track">https://gratefulheartdesign.com/sample-music/captain-scurvy.mp3 </span>
                   </div>
-                  Attribution for temporary music used: https://gratefulheartdesign.com/sample-music/bass-walker.mp3 by Kevin MacLeod (incompetech.com)
+                  Attribution for temporary music used: Captain Scurvy by Kevin MacLeod (incompetech.com)
                       Licensed under Creative Commons: By Attribution 3.0
                         http://creativecommons.org/licenses/by/3.0/
                 </figcaption>
