--- a/playlists/index.html
+++ b/playlists/index.html
@@ -16,7 +16,7 @@
 
   
     <nav role="navigation">
-      <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
+      <i class="navtoggle fas fa-bars hidden-large" id="navToggle"></i>
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
@@ -44,7 +44,6 @@
               <figcaption>
                 <h2 class="h5">Chart Toppers</h2>
                 <p>The most wanted in 20-teen music</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -61,7 +60,6 @@
               <figcaption>
                 <h2 class="h5">Hit Tracks</h2>
                 <p>Dance and Top 40</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -82,7 +80,6 @@
               <figcaption>
                 <h2 class="h5">Musica Esencial</h2>
                 <p>Contemporary &amp; Hits from Latin America</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -99,7 +96,6 @@
               <figcaption>
                 <h2 class="h5">Radio Mix</h2>
                 <p>Alternative and Top 40</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -118,7 +114,6 @@
               <figcaption>
                 <h2 class="h5">Throwbacks and Favs</h2>
                 <p>Contemporary Adult Listening</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -133,7 +128,6 @@
               <figcaption>
                 <h2 class="h5">Turntable Numbers</h2>
                 <p>Pop and RnB</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -148,7 +142,6 @@
               <figcaption>
                 <h2 class="h5">Yesterday&#39;s Hits</h2>
                 <p>The greatest music hits</p>
-                <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
               </figcaption>
             </figure>
             </a>
@@ -177,7 +170,6 @@
                   <figcaption>
                     <h2 class="h5">Acoustic Dream</h2>
                     <p>Down-To-Earth</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -194,7 +186,6 @@
                   <figcaption>
                     <h2 class="h5">Fresh and Trendy</h2>
                     <p>Latest &amp; Most Popular</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -211,7 +202,6 @@
                   <figcaption>
                     <h2 class="h5">Indie Days</h2>
                     <p>Stylish &amp; Edgy</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -226,7 +216,6 @@
                   <figcaption>
                     <h2 class="h5">Jazz Classics</h2>
                     <p>Sophtisticated</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -241,7 +230,6 @@
                   <figcaption>
                     <h2 class="h5">Mainstream Pop</h2>
                     <p>Casual Classics</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -258,7 +246,6 @@
                   <figcaption>
                     <h2 class="h5">Now Pop</h2>
                     <p>Fresh &amp; Accessible</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -275,7 +262,6 @@
                   <figcaption>
                     <h2 class="h5">Route 66</h2>
                     <p>Mid Tempo</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -290,7 +276,6 @@
                   <figcaption>
                     <h2 class="h5">Smooth Lounge</h2>
                     <p>Elegant &amp; Low-Key</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -311,7 +296,6 @@
                   <figcaption>
                     <h2 class="h5">Young And Free</h2>
                     <p>Epic Pop Beats</p>
-                    <center class="more"> <i class="fas fa-3x fa-ellipsis-h"></i></center>
                   </figcaption>
                 </figure>
                 </a>
@@ -321,6 +305,7 @@
             </ul>
             <h3 class="inverse bg-secondary" style="padding: 1rem;">All of these starter channels are available to you at just $8.99 per month.</h3>
             <center>  <a href="../sign-up" class="button btn-stack">Sign Up</a></center>
+
 
 
 
