adds slightly more whitespace on y axis for front page details expandables

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   <div class="wrapper wrapper-col">
 
-      <details>
+      <details class="my-30">
         <summary class="h6 inverse text-center">
           Studies have found:
         </summary>
@@ -256,7 +256,7 @@
     <h3 class="h4 inverse">Why can't you play personal music in your business?</h3>
   </div>
   <div class="wrapper wrapper-col">
-      <details>
+      <details class="my-30">
         <summary class="h6 inverse">
           Did you know:
         </summary>
