--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section class="why-playmore">
   <h3>Why Playmore?</h3>
   <div class="wrapper wrapper-nopad">
-    <ul class="flash-card-array">
+    <ul class="flash-card-array hidden">
       <figure class="flash-card">
         <i class="fas fa-clock"></i>
         <p class="h5">Quick</p>
@@ -324,8 +324,6 @@
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
   integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
   crossorigin="anonymous"></script>
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aplayer/1.10.1/APlayer.min.js"></script>
   
   
   
