--- a/playmore/index.html
+++ b/playmore/index.html
@@ -50,7 +50,7 @@
                   <p>Small business budget? No problem! This solution gives you access to legal background music that will keep your customers coming back.</p>
                 </div>
                 <center class="align-end mb-30">
-                  <a class="button" href="playmore/starter">Details</a>
+                  <a class="button" href="../starter">Details</a>
                   <a class="button" href="../sign-up/">Sign Up</a>
                 </center>
             </div>
@@ -67,7 +67,7 @@
                   <p>For a little more you get all the benefits or four licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
                 </div>
                 <center class="align-end mb-30">
-                  <a class="button" href="playmore/premium">Details</a>
+                  <a class="button" href="../premium">Details</a>
                   <a class="button" href="../sign-up/">Sign Up</a>
                 </center>
             </div>
