--- a/playmore/starter/channels/route-66/index.html
+++ b/playmore/starter/channels/route-66/index.html
@@ -66,7 +66,7 @@
 
 
         
-        <a href="../../playmore/starter/#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../playmore/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
 
