--- a/playmore/starter/index.html
+++ b/playmore/starter/index.html
@@ -325,7 +325,7 @@
     
     </div>
     
-    <center class="mb-30"><a class="button" href="../playmore/">All Plans and Pricing</a></center>
+    <center class="mb-30"><a class="button" href="../../playmore">All Plans and Pricing</a></center>
 
 
 
