--- a/playmore/premium/channels/chart-toppers/index.html
+++ b/playmore/premium/channels/chart-toppers/index.html
@@ -77,7 +77,7 @@
 
 
         
-        <a href="../premium/#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../#playlistsOnPlan" class="button btn-stack">All</a>
         
 
 
