--- a/playmore/starter/channels/mainstream-pop/index.html
+++ b/playmore/starter/channels/mainstream-pop/index.html
@@ -66,7 +66,7 @@
 
 
         
-        <a href="../starter/#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../#playlistsOnPlan" class="button btn-stack">All</a>
         
 
 
