--- a/playmore/premium/channels/turntable-numbers/index.html
+++ b/playmore/premium/channels/turntable-numbers/index.html
@@ -77,7 +77,7 @@
 
 
         
-        <a href="../#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../../#playlistsOnPlan" class="button btn-stack">All</a>
         
 
 
