--- a/playmore/starter/channels/young-and-free/index.html
+++ b/playmore/starter/channels/young-and-free/index.html
@@ -66,7 +66,7 @@
 
 
         
-        <a href="../#playlistsOnPlan" class="button btn-stack">All</a>
+        <a href="../../#playlistsOnPlan" class="button btn-stack">All</a>
         
 
 
