simplifies content structure and layout template delivery. Makes good progress with the structure. Initial commit before url fixes

--- a/starter-business-music/route-66/index.html
+++ b/starter-business-music/route-66/index.html
@@ -20,7 +20,7 @@
 <a class="navbar-brand" href="../../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../../">Home</a></li> <li><a class="" href="../../business-music-plans/starter/">Starter</a></li><li><a class="" href="../../business-music-plans/premium/">Premium</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
+  <li><a href="../../">Home</a></li> <li><a class="" href="../../starter-business-music/">Starter</a></li><li><a class="" href="../../premium-business-music/">Premium</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -32,7 +32,7 @@
   
   
 
-  <p>Pdefault/channels folder single template</p>
+  <p style="font-size: .8em">_default/single-channel.html template</p>
     <div class="jumbo-title">
       <h1 class="h2 inverse shadow" id="playerTitle">Route 66</h1>
     </div>
@@ -65,7 +65,7 @@
         <a href="../../starter-business-music/mainstream-pop/" class="button btn-stack">Previous</a>
 
         
-          <a href="../../business-music-plans/starter/#playlistsOnPlan" class="button btn-stack">All</a>
+          <a href="../../starter-business-music/starter/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../starter-business-music/young-and-free/" class="button btn-stack">Next</a>
