--- a/premium-business-music/yesterdays-hits/index.html
+++ b/premium-business-music/yesterdays-hits/index.html
@@ -20,7 +20,7 @@
 <a class="navbar-brand" href="../../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
   
-  <li><a href="../../">Home</a></li> <li><a class="" href="../../business-music-plans/starter/">Starter</a></li><li><a class="" href="../../business-music-plans/premium/">Premium</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
+  <li><a href="../../">Home</a></li> <li><a class="" href="../../starter-business-music/">Starter</a></li><li><a class="" href="../../premium-business-music/">Premium</a></li><li><a class="" href="../../sign-up/">Sign Up</a></li></ul>
 </nav>
 
   
@@ -32,7 +32,7 @@
   
   
 
-  <p>Pdefault/channels folder single template</p>
+  <p style="font-size: .8em">_default/single-channel.html template</p>
     <div class="jumbo-title">
       <h1 class="h2 inverse shadow" id="playerTitle">Yesterday&#39;s Hits</h1>
     </div>
@@ -76,7 +76,7 @@
         <a href="" class="button btn-stack">Previous</a>
 
         
-          <a href="../../business-music-plans/premium/#playlistsOnPlan" class="button btn-stack">All</a>
+          <a href="../../premium-business-music/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
         <a href="../../premium-business-music/radio-mix/" class="button btn-stack">Next</a>
