fixes the errant navigation to lyrics filter page from the previous button on single channel playlists

--- a/starter-business-music/indie-days/index.html
+++ b/starter-business-music/indie-days/index.html
@@ -68,7 +68,7 @@
           <a href="../../starter-business-music/#playlistsOnPlan" class="button btn-stack">All</a>
         
 
-        <a href="../../lyric-filters/" class="button btn-stack">Next</a>
+        <a href="../../starter-business-music/mainstream-pop/" class="button btn-stack">Next</a>
 
       </div>
     </div>
