--- a/starter-business-music/mainstream-pop/index.html
+++ b/starter-business-music/mainstream-pop/index.html
@@ -62,7 +62,7 @@
       <div class="row mt-30 space-around">
 
 
-        <a href="../../lyric-filters/" class="button btn-stack">Previous</a>
+        <a href="../../starter-business-music/indie-days/" class="button btn-stack">Previous</a>
 
         
           <a href="../../starter-business-music/#playlistsOnPlan" class="button btn-stack">All</a>
