changes text on 404 page

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
  
 
 <div class="jumbo-title">
-  <p class="h4 inverse shadow px-10">Oops! The page you are looking for does not exist - but our awesome business music plans do:</p>
+  <p class="h4 inverse shadow px-10">Oops! The page you are looking for does not exist - unlike our awesome plans for quick, easy and legal business music:</p>
 </div>
 
 <section class="wrapper my-30">
